# kcloudy.ai-platform

./: .gitattributes  .gitignore  .markdownlint.json  .mcp.json.example  AGENTS.md  CHANGES_SUMMARY.md  CLAUDE.md  FINAL_SUMMARY.md  FINAL_TEST_REPORT.md  README.en.md  README.md  REFACTOR_SUMMARY.md  SUBMISSION_SUMMARY.md  VERIFICATION_COMPLETE.md  VERIFY_PUSH_TEST.md  docker-compose.yml  test-model-selector.sh  test-optimized.txt  test-push-rebuild.txt  test-push.txt  test-results.md  verify-model-selector.sh
server/python/: .dockerignore  .env.docker  CLAUDE.md  Dockerfile  README.md  TEST_SUMMARY.md  alembic.ini  docker-entrypoint.sh  manage.py  pyproject.toml  pyrightconfig.json  pytest.ini
server/python/config/: README.md  application-local.yml.example
server/python/scripts/: add_business_config_comment.py  add_tenant_comments.py  check_dev.py  check_schema_basemodel.sh  fix_all_table_args.py  fix_table_args.py  fix_table_args_force.py  fix_tenant_models.py  fix_tenant_models_comprehensive.py  fix_tenant_version.py  format_code.py  migrate_db.py  migrate_schema_basemodel.py  run_tenant_migration.py  seed_data.py  setup_dev.py  verify_tenant_migration.py
server/python/src/: CLAUDE.md  __init__.py  application_listener.py  application_task.py  application_web.py  run.py
server/python/src/ai/: CLAUDE.md  module.py
server/python/src/ai/components/: __init__.py
server/python/src/ai/controllers/: __init__.py
server/python/src/ai/listeners/: __init__.py  setup.py
server/python/src/ai/migrations/: env.py
server/python/src/ai/models/: CLAUDE.md  __init__.py  conversation.py  enums.py  message.py  message_metadata.py  model_config.py  model_provider.py  plugin.py  plugin_config.py  plugin_default_model.py  plugin_runtime_state.py
server/python/src/ai/schemas/: __init__.py  chat.py  completion.py  conversation.py  file.py  metadata.py  model.py  model_config.py  plugin.py  plugin_config.py  plugin_default_model.py  plugin_management.py  skill.py
server/python/src/ai/services/: __init__.py  chat_service.py  conversation_service.py  credential_service.py  feedback_service.py  install_task_service.py  model_config_service.py  plugin.py  plugin_config_provider.py  plugin_config_service.py  plugin_default_model_service.py  plugin_verification_service.py
server/python/src/ai_plugin/: plugin.py
server/python/src/ai_plugin/cli/: __init__.py
server/python/src/ai_plugin/server/: __init__.py
server/python/src/config/: modules.py
server/python/src/demo/: app.py  application_listener.py  application_task.py  application_web.py  module.py  run.py
server/python/src/demo/common/: __init__.py  ctx.py  exception_handler.py  exceptions.py
server/python/src/demo/configs/: __init__.py  base.py  helpers.py  settings.py  yaml.py
server/python/src/demo/controllers/: dataset.py
server/python/src/demo/examples/: README.md  __init__.py
server/python/src/demo/initializers/: tenant_admin_initializer.py
server/python/src/demo/listeners/: setup.py
server/python/src/demo/middlewares/: admin_auth_middleware.py
server/python/src/demo/migrations/: env.py
server/python/src/demo/models/: __init__.py  dataset.py  enums.py  tenant.py
server/python/src/demo/schemas/: __init__.py  dataset.py
server/python/src/demo/seeds/: __init__.py  tenant_seed.py
server/python/src/demo/services/: dataset.py  tenant_service.py
server/python/src/demo/tasks/: setup.py
server/python/src/demo/utils/: __init__.py  dictionary_util.py  enum_util.py  tree_util.py
server/python/src/document/: CLAUDE.md  PROJECT_STRUCTURE.md  __init__.py  module.py
server/python/src/document/controllers/: __init__.py
server/python/src/document/listeners/: __init__.py  setup.py
server/python/src/document/migrations/: env.py
server/python/src/document/models/: __init__.py  config.py  document.py  enums.py  folder.py  library.py  metadata.py  permission.py  persona.py  recycle.py  tag.py
server/python/src/document/schemas/: __init__.py  document.py  folder.py  inner.py  library.py  member.py  metadata.py  permission.py  persona.py  recycle.py  tag.py
server/python/src/document/services/: __init__.py  document_service.py  folder_service.py  library_service.py  member_service.py  metadata_service.py  permission_config_service.py  permission_request_service.py  permission_service.py  persona_service.py  recycle_service.py  tag_service.py
server/python/src/extended/: __init__.py
server/python/src/framework/: CLAUDE.md  README.md  __init__.py
server/python/src/iam/: CLAUDE.md  app.py  dependencies.py  module.py
server/python/src/tenant/: CLAUDE.md  app.py  module.py
server/python/tests/: CLAUDE.md  CONTROLLER_TEST_GUIDE.md  README.md  TEST_SPEC_UPDATE_SUMMARY.md  conftest.py
server/python/tests/ai/: conftest.py
server/python/tests/demo/: CLAUDE.md  test_demo_imports.py
server/python/tests/document/: __init__.py
server/python/tests/examples/: test_http_plugins.py
server/python/tests/fixtures/: README.md
server/python/tests/framework/: CLAUDE.md  conftest.py  conftest_integration.py
server/python/tests/iam/: conftest.py
server/python/tests/integration/: test_plugin_refactor.py  test_tenant_user_api.py
server/python/tests/tenant/: conftest.py
server/rust/: .gitignore  .nextest.toml  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
server/rust/.cargo/: config.toml
server/rust/config/: README.md  application-local.yml.example  application.yml
server/rust/src/: lib.rs  main.rs
server/rust/src/common/: error.rs
server/rust/src/config/: mod.rs
server/rust/src/controllers/: dataset.rs  health.rs  mod.rs
server/rust/src/demo/: lib.rs
server/rust/src/examples/: langchain_demo.rs
server/rust/src/models/: dataset.rs  mod.rs
server/rust/src/schemas/: mod.rs
server/rust/src/services/: dataset.rs
server/rust/src/utils/: cache.rs
server/rust/tests/: unit.rs
server/rust/tests/fixtures/: data.rs  mod.rs
server/rust/tests/integration/: common.rs  helpers.rs  mod.rs
server/rust/tests/unit/: cache.rs  config.rs  error.rs  mod.rs
(+3648 files in other folders)
