[project]
name = "demo"
version = "1.0.0"
description = "Demo - 最小化 AI 助手平台"
license = {text = "Copyright © 2025 Moles. All Rights Reserved."}
authors = [{name = "tianchangjun", email = "tianchangjun@outlook.com"}]
requires-python = ">=3.12, <3.13"
dependencies = [
  # Web 框架
  "fastapi[standard]==0.115.12",
  "uvicorn[standard]==0.34.3",
  "orjson==3.10.15",
  # 配置管理
  "pydantic==2.10.5",
  "pydantic-settings==2.10.1",
  "pyyaml==6.0.2",
  # 数据库
  "sqlalchemy[asyncio]==2.0.40",
  "asyncpg==0.30.0",
  "pgvector==0.4.0",
  "alembic==1.14.1",
  # 缓存
  "aiocache[redis]==0.12.3",
  "redis[hiredis]==5.2.1",
  # 对象存储
  "minio==7.2.15",
  "oss2==2.19.1",
  "cos-python-sdk-v5==1.9.32",
  # 工具库
  "loguru==0.7.3",
  "pytz==2025.2",
  "nanoid==2.0.0",
  "click==8.2.1",
  # 安全工具
  "bcrypt==4.2.1",
  "PyJWT==2.10.1",
  # 定时任务
  "apscheduler~=3.10.4",
]

[project.scripts]
runserver   = "run:main"
runtask     = "application_task:main"
runlistener = "application_listener:main"
setup-dev   = "scripts.dev.setup_dev:main"
check-dev   = "scripts.dev.check_dev:main"
format-code = "scripts.dev.format_code:main"

[project.urls]
Homepage      = "https://gitcode.com/moles-team/Alon.git"
Documentation = "https://gitcode.com/moles-team/Alon/blob/develop/README.md"
Repository    = "https://gitcode.com/moles-team/Alon.git"
"Bug Tracker" = "https://gitcode.com/moles-team/Alon/issues"

[dependency-groups]
dev = [
  "pytest~=8.3.5",
  "pytest-asyncio~=0.25.3",
  "pytest-env~=1.1.3",
  "pytest-mock~=3.14.0",
  "pytest-benchmark~=4.0.0",
  "ruff==0.14.8",
  "pyright==1.1.407",
  "pre-commit==4.5.0",
  "commitizen==4.10.0",
]

langchain = [
  # LangChain 核心
  "langchain[community]==1.3.0",
  # LangGraph 工作流
  "langgraph==1.2.0",
  # OpenAI 集成
  "langchain-openai>=0.3.0",
  # MCP 集成
  "langchain-mcp-adapters>=0.1.0",
  # RAG 知识库示例
  "pypdf>=5.0.0",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo", "src/iam", "src/framework", "src/run.py", "src/application_web.py", "src/application_task.py", "src/application_listener.py", "scripts"]

[[tool.uv.index]]
name    = "huaweicloud"
url     = "https://mirrors.huaweicloud.com/repository/pypi/simple"
default = true
