[project]
name = "demo"
version = "1.0.0"
description = "Demo - 最小化 AI 助手平台"
license = {text = "Copyright © 2025 Moles. All Rights Reserved."}
authors = [{name = "tianchangjun", email = "tianchangjun@outlook.com"}]
requires-python = ">=3.12, <3.13"
dependencies = [
  # Web 框架
  "fastapi[standard]==0.115.12",
  "uvicorn[standard]==0.34.3",
  "orjson==3.10.15",
  # 配置管理
  "pydantic==2.10.5",
  "pydantic-settings==2.10.1",
  "pyyaml==6.0.2",
  # 数据库
  "sqlalchemy[asyncio]==2.0.40",
  "asyncpg==0.30.0",
  "pgvector==0.4.0",
  "alembic==1.14.1",
  # 缓存
  "aiocache[redis]==0.12.3",
  "redis[hiredis]==5.2.1",
  # 对象存储
  "minio==7.2.15",
  "boto3==1.38.32",
  "oss2==2.19.1",
  "cos-python-sdk-v5==1.9.32",
  # 工具库
  "loguru==0.7.3",
  "pytz==2025.2",
  "nanoid==2.0.0",
  "click==8.2.1",
  "sqlparse==0.5.0",
  "regex==2024.11.6",
  "nest_asyncio==1.6.0",
  # 安全工具
  "bcrypt==4.2.1",
  "PyJWT==2.10.1",
  "pycryptodome==3.23.0",
  # 定时任务
  "apscheduler~=3.10.4",
  # 插件系统
  "dpkt>=1.9.0",
  "psutil~=7.0.0",
  "werkzeug~=3.1.3",
  "yarl>=1.9.4,<2.0",
  "docstring_parser~=0.16.0",
  "gevent>=24.0.0",
  "aiofiles>=25.1.0",
]

[project.scripts]
runserver   = "run:main"
runtask     = "application_task:main"
runlistener = "application_listener:main"
setup-dev   = "scripts.setup_dev:main"
check-dev   = "scripts.check_dev:main"
format-code = "scripts.format_code:main"

[project.urls]
Homepage      = "https://gitcode.com/moles-team/Alon.git"
Documentation = "https://gitcode.com/moles-team/Alon/blob/develop/README.md"
Repository    = "https://gitcode.com/moles-team/Alon.git"
"Bug Tracker" = "https://gitcode.com/moles-team/Alon/issues"

[dependency-groups]
dev = [
  "pytest~=8.3.5",
  "pytest-asyncio~=0.25.3",
  "pytest-env~=1.1.3",
  "pytest-mock~=3.14.0",
  "pytest-benchmark~=4.0.0",
  "ruff==0.14.8",
  "pyright==1.1.407",
  "pre-commit==4.5.0",
  "commitizen==4.10.0",
  "aiosqlite>=0.22.1",
  "jurigged>=0.6.1",
  "pytest-cov>=7.1.0",
]

langchain = [
  # LangChain 核心
  "langchain[community]==1.3.0",
  # LangGraph 工作流
  "langgraph==1.2.0",
  # OpenAI 集成
  "langchain-openai>=0.3.0",
  # MCP 集成
  "langchain-mcp-adapters>=0.1.0",
  # RAG 知识库示例
  "pypdf>=5.0.0",
  # AI 组件依赖
  "tiktoken>=0.9.0",
  "aiolimiter>=1.2.1",
  "json-repair>=0.44.0",
]

# GraphRAG 图谱化依赖
graphrag = [
  # Core
  "environs==14.1.1",
  "datashaper==0.0.49",
  "pyaml-env==1.2.1",
  "python-dotenv==1.1.0",

  # Async IO
  "aiolimiter==1.2.1",

  # Data-Sci
  "numpy==1.26.4",
  "numba==0.61.2",
  "scipy==1.15.3",
  "graspologic==3.4.4",
  "networkx==3.4.2",
  "fastparquet==2024.11.0",
  "pyarrow==15.0.2",

  # LLM
  "openai>=1.76.0",
  "nltk==3.9.1",

  # Vector Stores
  "lancedb==0.17.0",

  # Network & Utils
  "tenacity==9.1.2",
  "rich==14.0.0",
  "devtools==0.12.2",
  "json-repair==0.44.1",
  "swifter==1.4.0",

  # Azure
  "azure-identity==1.22.0",
  "azure-storage-blob==12.25.1",
  "azure-search-documents==11.5.3",

  # Neo4j
  "neo4j==5.28.1",

  # Plotting
  "plotly==6.0.1",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/demo",
  "src/iam",
  "src/framework",
  "src/ai",
  "src/ai_plugin",
  "src/extended",
  "src/application_web.py",
  "src/application_task.py",
  "src/application_listener.py",
  "scripts",
]

[[tool.uv.index]]
name    = "huaweicloud"
url     = "https://mirrors.huaweicloud.com/repository/pypi/simple"
default = true

[tool.pytest.ini_options]
asyncio_mode                       = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths                          = ["tests"]
python_files                       = ["test_*.py"]
python_classes                     = ["Test*"]
python_functions                   = ["test_*"]
