[package]
name = "demo"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
description = "Demo - 最小化 AI 助手平台 Rust 后端"
license = "Copyright © 2025 Moles. All Rights Reserved."
authors = ["tianchangjun <tianchangjun@outlook.com>"]
repository = "https://gitcode.com/moles-team/Alon.git"
homepage = "https://gitcode.com/moles-team/Alon"
readme = "README.md"
keywords = ["ai", "assistant", "axum", "langchain", "rag"]
categories = ["web-programming", "asynchronous"]

[dependencies]
# Web 框架
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header", "query"] }
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "compression-gzip"] }
hyper = { version = "1.6", features = ["full"] }
tokio = { version = "1.44", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# 配置管理
config = "0.15"
dotenvy = "0.15"

# 数据库 (SQLx)
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.29", features = ["tokio-rustls-comp", "connection-manager"] }

# AI 编排 (LangChain Rust) - OpenAI 支持默认包含
langchain-rust = "4.6"

# 异步运行时支持
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
tracing-appender = "0.2"

# 错误处理
thiserror = "2.0"
anyhow = "1.0"

# 数据类型
uuid = { version = "1.16", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
time = "0.3"

# OpenAPI 文档
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# 数据验证
validator = { version = "0.20", features = ["derive"] }

# 工具库
bytes = "1.10"
byteorder = "1.5"
base64 = "0.22"
hex = "0.4"
url = "2.5"
regex = "1.11"
nanoid = "0.4"

# 命令行
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
# 测试框架
cargo-nextest = "0.9"
axum-test = "17.2"
mockall = "0.13"
tokio-test = "0.4"

# 性能基准测试
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

# 测试工具
pretty_assertions = "1.4"
assert_matches = "1.5"
proptest = "1.6"
fake = { version = "4.2", features = ["derive", "chrono", "uuid"] }
quickcheck = "1.0"
quickcheck_macros = "1.0"
rstest = "0.25"
tempfile = "3.19"
rand = "0.9"

# 测试数据库
testcontainers = "0.23"
testcontainers-modules = { version = "0.12", features = ["postgres", "redis"] }

[[bin]]
name = "demo"
path = "src/main.rs"

[lib]
name = "demo"
path = "src/lib.rs"

[[bench]]
name = "api_benchmark"
harness = false

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "unwind"
incremental = false
codegen-units = 16
strip = true

[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
incremental = false
codegen-units = 16
